Allow items to be refunded with stored time Fix env being ignored
